--- a/com.flowics.graphics.sdPlugin/manifest.json
+++ b/com.flowics.graphics.sdPlugin/manifest.json
@@ -54,7 +54,7 @@
   "CodePath": "index.html",
   "Name": "Flowics",
   "Description": "Controls for Flowics Graphics Packages",
-  "Icon": "images/category-icon",
+  "Icon": "images/plugin-icon",
   "Category": "Flowics",
   "CategoryIcon": "images/category-icon",
   "URL": "https://github.com/flowics/streamdeck-graphics-control",
